--- a/partials/footer.html
+++ b/partials/footer.html
@@ -10,13 +10,12 @@
             <div class="social-icons">
                 <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                 <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="#" aria-label="Instagram"><i class="fab fa-whatsapp"></i></a>
             </div>
         </div>
         <div class="footer-right-col">
             <div class="material-stats">
-                <h3><span id="material-count-display">0</span>+</h3>
+                <h3><span id="material-count-display">2000</span>+</h3>
                 <p>Estimated Materials Available</p>
             </div>
             <div class="footer-links">
@@ -35,4 +34,4 @@
     </div>
     <div class="footer-bottom">
         <p>&copy; <span id="current-year-footer"></span> Course Library. All rights reserved.</p>
-        <p class="app-id">Website ID: 1.0.0</p>
+        <p class="app-id">Website ID: 1.1.0 (testing version@2025)</p>
